solved the positioning/showing of radios - was generating horizontal scroll

--- a/app/modules/Authenticate/embedded.scss
+++ b/app/modules/Authenticate/embedded.scss
@@ -23,6 +23,9 @@ aside .logged-as {
   .logout-icon { float: right; cursor: pointer;}
   .email {
     float: left;
+    font-size:small;
+    padding:3px;
+    line-height:0.5em;
   }
   img {
     float: left;
